# Ai-launch-studio-

./: .gitignore  AGENTS.md  PRD.md  README.md  implementation_plan.md  planning.md  run_public_cloudflare.sh  run_public_cloudflare_named.sh  run_studio.ps1  team.md
backend/: .env.example  README.md  launch_studio.db-shm  launch_studio.db-wal  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  biz_planning_agent.py  chat_orchestrator.py  dev_agent.py  marketer_agent.py  md_agent.py  orchestrator.py  planner_agent.py  poster_agent.py  product_copy_agent.py  research_agent.py  video_producer_agent.py  voice_agent.py
backend/app/core/: __init__.py  config.py
backend/app/repositories/: __init__.py  sqlite_history.py
backend/app/routers/: __init__.py  chat.py  jobs.py  launch.py  runs.py  voice.py
backend/app/schemas/: __init__.py  launch_package.py
backend/app/services/: __init__.py  agent_runtime.py  media_jobs.py  media_service.py  onboarding_dialogue_service.py  product_image_service.py  voice_service.py
backend/tests/: test_agent_runtime.py  test_chat_api.py  test_chat_orchestrator.py  test_jobs_api.py  test_media_duration.py  test_media_quality_settings.py  test_media_service.py  test_onboarding_dialogue_service.py  test_orchestrator_e2e.py  test_runs_api.py  test_video_text_budget.py  test_voice_agent.py  test_voice_api.py  test_voice_fallback.py
docs/: README.md  api.md  backend_architecture.md  business_model.md  codex_workflow.md  db_schema.md  expansion.md  frontend_architecture.md  mvp.md  (+10 more)
(+29 files in other folders)
